syntax = "proto3";

message VECTOR3 {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}